post example order using body parameters
