# apiserver/openapi/demoapi.yaml
@@ -77,6 +77,25 @@ paths:
           description: Name of the person to greet.
           schema:
             $ref: "#components/schemas/teammember"
+  /order:
+    post:
+      summary: Order an item.
+      description: Generates an order.
+      operationId: api.demo.add_order
+      responses:
+        201:
+          description: order response
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Order placed."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#components/schemas/vmitem"
   /secret/usingapikey:
     get:
       summary: Return secret string protected by a token
@@ -129,3 +148,103 @@ components:
         - "manu"
         - "george"
       example: sam
+    vmitem:
+      type: object
+      properties:
+        catalog-reference:
+          $ref: "#components/schemas/catalog-reference"
+        size:
+          $ref: "#components/schemas/size"
+        role:
+          $ref: "#components/schemas/role"
+        metal-category:
+          $ref: "#components/schemas/metal-category"
+        environment:
+          $ref: "#components/schemas/environment"
+        application-id:
+          $ref: "#components/schemas/application-id"
+        security-zone:
+          $ref: "#components/schemas/security-zone"
+        group-permissions:
+          $ref: "#components/schemas/group-permissions"
+      example: >
+        {
+          "catalog-reference": "L01",
+          "size": "S1",
+          "role": "APP",
+          "metal-category": "B",
+          "environment": "Test",
+          "application-id": "_A01",
+          "security-zone": "_Z1",
+          "group-permissions": [
+            { 
+              "ad-group-name": "f_adm",
+              "local-group-name": "Power User"
+            }
+          ]
+        }
+    size:
+      type: string
+      enum:
+        - S1
+        - M1
+        - M2
+        - L1
+        - L2
+        - X1
+      example: "{ \"size\": \"S1\" }"
+    catalog-reference:
+      type: string
+      enum:
+        - L01
+        - L02
+      example: "{ \"catalog-reference\": \"L01\" }"
+    role:
+      type: string
+      enum:
+        - APP
+        - WEB
+        - DB
+      example: "{ \"role\": \"APP\" }"
+    metal-category:
+        type: string
+        enum:
+          - B
+          - S
+          - G
+          - GP
+        example: "{ \"metal-category\": \"B\" }"
+    environment:
+        type: string
+        enum:
+          - Dev
+          - Test
+          - Int
+          - Acc
+          - Prod
+        example: "{ \"environment\": \"Test\" }"
+    application-id:
+      type: string
+      enum:
+        - _A01
+        - _A02
+        - _A03
+    security-zone:
+      type: string
+      enum:
+        - _Z1
+        - _Z2
+    group-permissions:
+      type: array
+      items:
+        $ref: "#components/schemas/group-permission"
+    group-permission:
+      type: object
+      required:
+        - ad-group-name
+        - local-group-name
+      properties:
+        ad-group-name:
+          type: string
+        local-group-name:
+          type: string  
